--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,126 +1,186 @@
-
 <div class="label">
-    <h3 class= "container">Funding by Location</h1>
+    <h3 class= "container">Funding by Location
+      <%= form_tag locations_path,class: 'container', :method => :get do %>
+        <p>
+          <%= label_tag :search, 'Location' %>
+          <%= text_field_tag :search, params[:search] %>
+          <%= label_tag :radius %>
+          <%= text_field_tag :radius, params[:radius], value: 50 %>
+          <%= submit_tag "Search" %>
+        </p>
+      <% end %>
+      </h3>
 </div>
 
-<%= form_tag locations_path, :method => :get do %>
-  <p>
-    <%= label_tag :search, 'Location' %>
-    <%= text_field_tag :search, params[:search] %>
-    <%= label_tag :radius %>
-    <%= text_field_tag :radius, params[:radius], value: 50 %>
-    <%= submit_tag "Search Near" %>
-  </p>
-<% end %>
+<section class="container group">
+<br>
+<h2><%= params[:search] %></h2>
+<hr>
+</section>
+
+<section class="container group">
+  <div class="grid_12">
+    <!-- top left -->
+    <h3>LTM Funding</h3>
+    <table class="table table-hover sortable">
+      <tr>
+        <th>Quarter</th>
+        <th>Amount ($ millions)</th>
+        <th>Volume</th>
+        <th>Avg. Round Investment</th>
+      </tr>
+      <tr>
+        <td>Q2 2013</td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).sum('funding_amount')) %></td>
+        <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).count %></td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').for_city(params[:search]).average('funding_amount')) %></td>
+      </tr>
+     </tr>
+        <td>Q1 2013</td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).sum('funding_amount')) %></td>
+        <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).count %></td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').for_city(params[:search]).average('funding_amount')) %></td>
+      </tr>
+    </tr>
+        <td>Q4 2012</td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').for_city(params[:search]).sum('funding_amount')) %></td>
+        <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').count %></td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').for_city(params[:search]).average('funding_amount')) %></td>
+      </tr>
+    </tr>
+        <td>Q3 2012</td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).sum('funding_amount')) %></td>
+        <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).count %></td>
+        <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').for_city(params[:search]).average('funding_amount')) %></td>
+      </tr>
+
+    </table>
+
+  </div>
+
+  <div class="grid_12">
+    <!-- top right -->
+    <h3>Industry - Hardcoded 'SF'</h3>
+    <%= render "location_donut" %>
+  </div>
+</section>
 
 
-<%= render :partial => "location_bar" %>
-<%= render :partial => "location_donut" %>
+<section class="container group">
+
+  <div class="grid_12">
+    <!-- bottom left -->
+    <h3>LTM Funding by Round for: <%= params[:search] %></h3>
+    <table class="table table-hover sortable">
+      <tr>
+        <th>Series</th>
+        <th>Amount ($ millions)</th>
+        <th>Volume</th>
+        <th>Avg. Round Investment</th>
+      </tr>
+      <tr>
+        <td>Seed</td>
+        <td> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Angel</td>
+        <td> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series A</td>
+        <td> <%=  format_mil(Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('a').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series B</td>
+        <td> <%=  format_mil(Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('b').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series C</td>
+        <td> <%=  format_mil(Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('c').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series D</td>
+        <td> <%=  format_mil(Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('d').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series E</td>
+        <td> <%=  format_mil(Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('e').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series F</td>
+        <td> <%=  format_mil(Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('f').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Series G</td>
+        <td> <%=  format_mil(Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('g').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      <tr>
+        <td>Venture Round</td>
+        <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Private Equity</td>
+        <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+      <tr>
+        <td>Debt Round</td>
+        <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
+        <td> <%=  Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).count %></td>
+        <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
+      </tr>
+    </table>
+  </div>
 
 
-<!-- links are still broken -->
-<% if params[:search].present? %>
-<table class="left">
-  <tr>
-    <th>Company Name</th>
-    <th>Industry</th>
-  </tr>
-  <% @companies.each do |company| %>
-  <tr>
-    <td><%= link_to company.name, company %></td>
-    <td><%= link_to company.industry.name, company.industry %></td>
-  </tr>
-  <% end %>
-<% end %>
-</table>
-<% if params[:search].present? %>
-  <%= render :partial => "map" %>
-<% end %>
+  <div class="grid_12">
+    <!-- bottom right -->
+    <%= render :partial => "location_bar" %>
+  </div>
+</section>
+
 
 
 
 <div class="container grid_12">
-  <h2>LTM Funding by Round for: <%= params[:search] %></h2>
-  <table class="table table-hover sortable">
-    <tr>
-      <th>Series</th>
-      <th>Amount ($ millions)</th>
-      <th>Volume</th>
-      <th>Avg. Round Investment</th>
-    </tr>
-    <tr>
-      <td>Seed</td>
-      <td> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('seed').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Angel</td>
-      <td> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('angel').for_city(params[:search]).ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series A</td>
-      <td> <%=  format_mil(Funding.for_funding_round('a').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('a').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('a').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series B</td>
-      <td> <%=  format_mil(Funding.for_funding_round('b').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('b').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('b').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series C</td>
-      <td> <%=  format_mil(Funding.for_funding_round('c').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('c').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('c').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series D</td>
-      <td> <%=  format_mil(Funding.for_funding_round('d').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('d').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('d').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series E</td>
-      <td> <%=  format_mil(Funding.for_funding_round('e').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('e').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('e').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series F</td>
-      <td> <%=  format_mil(Funding.for_funding_round('f').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('f').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('f').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Series G</td>
-      <td> <%=  format_mil(Funding.for_funding_round('g').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('g').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('g').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Venture Round</td>
-      <td> <%=  format_mil(Funding.for_funding_round('venture_round').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('venture_round').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('venture_round').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Private Equity</td>
-      <td> <%=  format_mil(Funding.for_funding_round('private_equity').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('private_equity').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('private_equity').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
-    <tr>
-      <td>Debt Round</td>
-      <td> <%=  format_mil(Funding.for_funding_round('debt_round').ltm_fundings(365).sum('funding_amount') ) %></td>
-      <td> <%=  Funding.for_funding_round('debt_round').ltm_fundings(365).count %></td>
-      <td> <%=  format_mil(Funding.for_funding_round('debt_round').ltm_fundings(365).average('funding_amount') ) %></td>
-    </tr>
 
 
-
+  <!-- links are still broken -->
+  <% if params[:search].present? %>
+  <table class="left">
+    <tr>
+      <th>Company Name</th>
+      <th>Industry</th>
+    </tr>
+    <% @companies.each do |company| %>
+    <tr>
+      <td><%= link_to company.name, company %></td>
+      <td><%= link_to company.industry.name, company.industry %></td>
+    </tr>
+    <% end %>
+  <% end %>
   </table>
+  <% if params[:search].present? %>
+    <%= render :partial => "map" %>
+  <% end %>
+
