--- a/app/views/industries/_industry_donut.html.erb
+++ b/app/views/industries/_industry_donut.html.erb
@@ -40,6 +40,14 @@
     element: 'industry_funding',
     data:
       <%= raw(j_industry_array) %>,
+    backgroundColor: '#ccc',
+    labelColor: '#060',
+    colors: [
+    '#0BA462',
+    '#39B580',
+    '#67C69D',
+    '#95D7BB'
+    ],
     formatter: function (x) { return x + "%" }
   });
 
