--- a/app/views/fundings/_funding_bar.html.erb
+++ b/app/views/fundings/_funding_bar.html.erb
@@ -20,6 +20,7 @@
 <script type="text/javascript">
 Morris.Bar({
   element: 'funding-bar',
+  defaultLabelColor: '#ff00ff',
   data:
       <%= raw(j_data_array) %>,
   xkey: 'y',
