--- a/app/views/fundings/_funding_show.html.erb
+++ b/app/views/fundings/_funding_show.html.erb
@@ -42,16 +42,41 @@
 Morris.Donut({
   element: 'company_funding',
   data:
-    <%= raw(j_company_array) %>
+    <%= raw(j_company_array) %>,
+      backgroundColor: '#ccc',
+  labelColor: '#060',
+  colors: [
+    '#0BA462',
+    '#39B580',
+    '#67C69D',
+    '#95D7BB'
+  ],
+
 });
 Morris.Donut({
   element: 'fcode_funding',
   data:
-    <%= raw(j_fcode_array) %>
+    <%= raw(j_fcode_array) %>,
+      backgroundColor: '#ccc',
+  labelColor: '#060',
+  colors: [
+    '#0BA462',
+    '#39B580',
+    '#67C69D',
+    '#95D7BB'
+  ],
 });
 Morris.Donut({
   element: 'industry_funding',
   data:
-    <%= raw(j_industry_array) %>
+    <%= raw(j_industry_array) %>,
+      backgroundColor: '#ccc',
+  labelColor: '#060',
+  colors: [
+    '#0BA462',
+    '#39B580',
+    '#67C69D',
+    '#95D7BB'
+  ],
 });
 </script>
