--- a/app/views/industries/_industry_bar.html.erb
+++ b/app/views/industries/_industry_bar.html.erb
@@ -9,7 +9,7 @@
 <% end  %>
 
 <% dates.each do |d| %>
-  <% data_array << { a: Funding.monthly_fundings(d).for_industry(7).sum(:funding_amount), y: d.strftime()} %>
+  <% data_array << { a: Funding.monthly_fundings(d).for_industry(7).sum(:funding_amount), y: d.strftime("%b%y")} %>
 <% end %>
 
 <% j_data_array = data_array.to_json %>
@@ -25,12 +25,6 @@ Morris.Bar({
   xkey: 'y',
   ykeys: ['a'],
   labels: ['Funding'],
-  barFillColors: [
-    '#aaa #555',      // from light gray to dark gray (top to bottom)
-    '#555 #aaa black', // from dark day, through light gray, to black
-    '#555 #aaa black', // from dark day, through light gray, to black
-    '#555 #aaa black', // from dark day, through light gray, to black
-    '#555 #aaa black' // from dark day, through light gray, to black
-  ]
+  barColors: ['#377D3C', '#228B22', '#32CD32']
 });
 </script>
