--- a/app/views/locations/_location_donut.html.erb
+++ b/app/views/locations/_location_donut.html.erb
@@ -1,24 +1,35 @@
 <% industry_array= Array.new %>
-<% a = Funding.ltm_fundings(365).for_city("San Francisco") %>
-<% total_funding = a.sum('funding_amount') %>
+
+<% total_funding = fundings.sum('funding_amount') %>
 
 <% Industry.order('name ASC').each do |industry| %>
     <% industry_name = industry.name.titleize %>
-    <% percent = a.for_industry(industry.id).sum('funding_amount') / total_funding %>
+    <% percent = fundings.for_industry(industry.id).sum('funding_amount') / total_funding %>
+    <% if percent==0||percent.nan? %>
+    <% else %>
     <% industry_array << {label: industry_name , value: (percent*100).round(0) } %>
+    <% end %>
 
 <% end %>
 
 <% j_industry_array = industry_array.to_json %>
 
-<div id="industry_funding", class="right"></div>
+<div id="industry_location_funding", class="right"></div>
 <div class="clearfix"></div>
 <script type="text/javascript">
 
   Morris.Donut({
-    element: 'industry_funding',
+    element: 'industry_location_funding',
     data:
       <%= raw(j_industry_array) %>,
+    backgroundColor: '#ccc',
+    labelColor: '#060',
+    colors: [
+    '#0BA462',
+    '#39B580',
+    '#67C69D',
+    '#95D7BB'
+    ],
     formatter: function (x) { return x + "%" }
   });
 
