--- a/app/views/locations/_map.html.erb
+++ b/app/views/locations/_map.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
     <style type="text/css">
       /*#map-canvas { height: 40%; width: 25%}*/
-      #map-canvas { height: 85%; width: 80%; max-width:760px; float: center; margin:30px; border: solid green;}
+      #map-canvas { height: 100%; width: 100%; min-height: 400px; min-width: 400px;  margin:10px; border: solid green;}
     </style>
 
     <script type="text/javascript"
@@ -75,4 +75,4 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <% end %>
 
-<div id="map-canvas" />
+<div id="map-canvas"></div>
