--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>CrunchbaseStatistics</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+   <script src="http://code.jquery.com/jquery-2.0.1.min.js"></script>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= yield :head %>
