--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -177,7 +177,8 @@
       <% end %>
     </table>
     </div>
-
-   <div class="grid_16"> <%= render :partial => "map" %></div>
+   <div class="grid_16">
+    <%= render :partial => "map" %>
+    </div>
   <% end %>
 </section>
