--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,14 @@
             <h1 class="grid_7">Simple <span class="bling">Fund</span></h1>
             <nav class="home_nav">
               <ul>
-                <li><%= link_to "Home", "/" %></li>
-                <li><%= link_to "Funding", fundings_url %></li>
+                <li><%= link_to "Home", root_url %></li>
                 <li><%= link_to "Industries", "/industries" %></li>
-                <li><%= link_to "Angels", "/individuals" %></li>
-                <li><%= link_to "Geographic", "/locations" %></li>
+                <li><%= link_to "Companies", companies_url %></li>
+                <li><%= link_to "Financials", financials_url %></li>
+                <li><%= link_to "Individuals", "/individuals" %></li>
+                <li><%= link_to "Fundings", fundings_url %></li>
                 <li><%= link_to "Investments", "/investments" %></li>
-                <li><%= link_to "Contact", contact_url %></li>
+                <li><%= link_to "Locations", "/locations" %></li>
               </ul>
             </nav>
           </div>
@@ -55,7 +56,7 @@
           <ul>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><%= link_to "Contact", contact_url %></li>
           </ul>
         </div>
         <div class="grid_16">
