--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,3 +1,12 @@
+<script>
+      $(document).ready(function() {
+        $("h7").on("click", function() {
+          $("#map-canvas").slideToggle();
+        });
+      });
+
+  </script>
+
 <div class="label">
     <h3 class= "container">Funding by Location
       <%= form_tag locations_path,class: 'container', :method => :get do %>
@@ -13,7 +22,7 @@
 
 <section class="container group">
 <br>
-<h2><%= params[:search] %></h2>
+<h2><%= params[:search].try(:titleize) %></h2>
 <hr>
 </section>
 
@@ -59,7 +68,7 @@
 
   <div class="grid_12">
 
-    <h3>Industry Views for- <%= params[:search] %></h3>
+    <h3>Industry Views for- <%= params[:search].try(:titleize) %></h3>
     <%= render :partial => "location_donut", locals: {fundings: Funding.ltm_fundings(365).for_city(params[:search])} %>
   </div>
 </section>
@@ -68,7 +77,7 @@
 
   <div class="grid_12">
     <!-- bottom left -->
-    <h3>LTM Funding by Round for: <%= params[:search] %></h3>
+    <h3>LTM Funding by Round for: <%= params[:search].try(:titleize) %></h3>
     <table class="table table-hover sortable">
       <tr>
         <th>Series</th>
@@ -177,6 +186,7 @@
     </table>
     </div>
    <div class="grid_16">
+    <h7><%= image_tag 'mag_glass.svg', class: 'search-icon' %></h7>
     <%= render :partial => "map" %>
     </div>
   <% end %>
